Fix favicon and PWA icons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quran Class Manager</title>
 
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-title" content="Quran Manager" />
 
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/icon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon-192.png" />
 
     <meta property="og:title" content="Quran Class Manager" />
     <meta property="og:description" content="Aplikasi manajemen kelas Al-Quran untuk monitoring progress santri" />
